--- a/index.css
+++ b/index.css
@@ -5,11 +5,21 @@ body {
   font-family: 'Helvetica Neue', Helvetica, 'Lucida Grande', Arial, sans-serif;
 }
 
+a {
+  cursor: pointer;
+}
+
 .box {
   padding: 10px;
   border: 1px solid #333;
   color: #333;
   background: #CCC;
+}
+
+.js-pending {
+  border-color: #660;
+  color: #660;
+  background: #FFC;
 }
 
 .js-error {
