hide empty message/result boxes in sidebar

--- a/css/index.css
+++ b/css/index.css
@@ -31,6 +31,10 @@ a {
 .form-search input {
   width: 100%;
 }
+.alert.empty,
+.well.empty {
+  display: none;
+}
 
 .js-success {
   border-color: #060;
