--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+/* Require Bootstrap styles. */
+@import "bootstrap.css";
+
 body {
   margin: 0;
   padding: 25px;
@@ -15,7 +18,6 @@ a {
   color: #333;
   background: #CCC;
 }
-
 .js-pending {
   border-color: #660;
   color: #660;
