--- a/css/index.css
+++ b/css/index.css
@@ -80,20 +80,32 @@ a {
     float: left;
     margin-left: 1%;
 }
+.issue-list h4 {
+  padding: 10px;
+  color: #fff;
+  background: #249;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
+  border-radius: 5px;
+}
 .issue-list ul {
     list-style: none;
     padding:0;
     margin:0;
 }
 .issue-list li {
+  margin-bottom: 5px;
+}
+.issue-list li a {
+    display: block;
     font-size:12px;
     padding:5px;
-    background:#ccc;
+    background:#def;
     list-style:none;
     margin:0;
+    border-radius: 5px;
 }
-.issue-list li:nth-child(even) {
-    background: #b2b2b2;
+.issue-list li:nth-child(even) a {
+    background: #cde;
 }
 
 .modal-mask {
