--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,10 @@ a {
   cursor: pointer;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .box {
   padding: 10px;
   border: 1px solid #333;
@@ -92,20 +96,18 @@ a {
     padding:0;
     margin:0;
 }
-.issue-list li {
-  margin-bottom: 5px;
-}
 .issue-list li a {
-    display: block;
-    font-size:12px;
-    padding:5px;
-    background:#def;
-    list-style:none;
-    margin:0;
-    border-radius: 5px;
+  display: block;
+  border-top: 1px solid #249;
+  font-size: 12px;
+  padding: 5px;
+  list-style: none;
+  color: #249;
 }
-.issue-list li:nth-child(even) a {
-    background: #cde;
+.issue-list li a:hover {
+  color: #fff;
+  background: #249;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
 }
 
 .modal-mask {
